--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GIthub</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nobis ipsa accusantium eligendi fugit magnam expedita aut, veniam molestias ex sint, temporibus a, nemo dolores animi tenetur qui? Quisquam, adipisci?</p>
+  <div class="mini">
+    <h3>This is first time for <u>SAIDUL</u></h3>
+    
+    <p><b>W</b>elcome to my small portfolio.Thanks for visiting my page.Big love to you.</p>
+    <a class="joy" href="">Home</a>
+    <a class="joy" href="">About</a>
+    <a class="joy" href="">personal</a>
+
   </div>
+  <div class="small">
+    <h2>Website</h2>
+    <h3>SAIDUL</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem blanditiis eaque impedit doloremque, praesentium voluptate magni voluptas esse non pariatur cum et molestiae, obcaecati beatae, omnis aperiam voluptatibus hic corrupti ipsa placeat harum quo animi. Vero quod cum cumque praesentium! Sequi quod ducimus doloremque voluptates magni consequuntur aut similique pariatur!</p>
+
+  </div>
+  <div class="put">
+  <h4>Some of my picture</h4>
+  <img src="https://media.istockphoto.com/id/1427894275/photo/portrait-of-bearded-man-in-cap-posing-in-profile-outdoors-profile-view-of-bearded-young-man.jpg?s=612x612&w=0&k=20&c=nDvqZgDtIp7QvfmqNenbcH__jdnYTGUbpXvy7ViYhe0=" alt="">
+  <img src="https://media.istockphoto.com/id/1398385367/photo/happy-millennial-business-woman-in-glasses-posing-with-hands-folded.jpg?s=612x612&w=0&k=20&c=Wd2vTDd6tJ5SeEY-aw0WL0bew8TAkyUGVvNQRj3oJFw=" alt="">
+  <img src="https://media.istockphoto.com/id/1399788030/photo/portrait-of-young-confident-indian-woman-pose-on-background.jpg?s=612x612&w=0&k=20&c=aQw5YhGl99hL1O77thwpQTmqVE7bc8rCX9H0gTeoX_k=" alt="">
+
+</div>
 </body>
 </html>
